--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -14,7 +14,7 @@
 <main>
   <div class="home">
     <div class="headline-one">
-  <h1>Instagram Video Download</h1>
+  <h1>Instagram Video , Reels and Post Downloader</h1>
   <p>Getreels supports all types of Instagram videos links</p>
 </div>
 
