--- a/public/style/about.css
+++ b/public/style/about.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500&display=swap');
 
 .about-us{
-  height: 100vh;
   width: 100%;
   padding: 90px 0;
   background: #ffffff;
@@ -19,7 +18,8 @@
   justify-content: space-around;
 }
 .text{
-  width: 540px;
+  width: auto;
+ padding-bottom: 10px;
 }
 .text h2{
   font-size: 90px;
