--- a/public/style/footer.css
+++ b/public/style/footer.css
@@ -1,5 +1,6 @@
 
 .footer2 {
+  
   position: relative;
   width: 100%;
   background: #3586ff;
@@ -9,7 +10,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin-top: 60px;
+
 }
 
 .social-icon,
@@ -61,40 +62,14 @@
 }
 
 .wave {
+  display: none;
   position: absolute;
-  top: -100px;
+  bottom: 0; /* Position the wave at the bottom of its container */
   left: 0;
   width: 100%;
-  height: 100px;
+  height: 100px; /* Adjust the height as needed */
   background: url("https://i.ibb.co/wQZVxxk/wave.png");
   background-size: 1000px 100px;
 }
 
-.wave#wave1 {
-  z-index: 1000;
-  opacity: 1;
-  bottom: 0;
- 
-}
-
-.wave#wave2 {
-  z-index: 999;
-  opacity: 0.5;
-  bottom: 10px;
- 
-}
-
-.wave#wave3 {
-  z-index: 1000;
-  opacity: 0.2;
-  bottom: 15px;
- 
-}
-
-.wave#wave4 {
-  z-index: 999;
-  opacity: 0.7;
-  bottom: 20px;
- 
-}
 
