--- a/views/contactus.hbs
+++ b/views/contactus.hbs
@@ -8,7 +8,7 @@
           <p>We're here to make your social media experience even better.</p>
           <p>Email : contact.getreels@gmail.com </p>
         <div class="data">
-        <a href="https://www.linkedin.com/in/afsalmadathingal/" class="hire">Contact me </a>
+        <a href="contact.getreels@gmail.com" class="hire">Contact me </a>
         </div>
       </div>
     </div>
