--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -48,19 +48,15 @@
     <li class="center"><a href="/about">About</a></li>
     <li class="upward"><a href="/services">Services</a></li>
     <li class="forward"><a href="/contactus">Contact</a></li>
+    <li><a href="/policy">Policy</a></li>
 </ul>
 
     {{{body}}}
 
 
 <footer class="footer2">
-    <div class="waves">
-      <div class="wave" id="wave1"></div>
-      <div class="wave" id="wave2"></div>
-      <div class="wave" id="wave3"></div>
-      <div class="wave" id="wave4"></div>
-    </div>
-    <ul class="social-icon">
+  <div class="footer-container">
+ <ul class="social-icon">
       <li class="social-icon__item"><a class="social-icon__link" href="https://www.facebook.com/afsalshaofficial/">
           <ion-icon name="logo-facebook"></ion-icon>
         </a></li>
@@ -82,6 +78,8 @@
 
     </ul>
     <p>&copy;2024 Getreels | All Rights Reserved</p>
+  </div>
+   
   </footer>
 
 </body>
