--- a/views/privacypolicy.hbs
+++ b/views/privacypolicy.hbs
@@ -1,46 +1,67 @@
 <link rel="stylesheet" href="/style/about.css">
-<title> Privacy Policy  | GetReels </title>
-  <section class="about-us">
+<title> Privacy Policy | GetReels </title>
+<section class="about-us">
     <div class="about">
-      <div class="text">
-     <div>
-  <h2>Privacy Policy</h2>
+        <div class="text">
+            <div>
+                <h2>Privacy Policy</h2>
 
-  <p>Welcome to Get Reels ("the Site"). This Privacy Policy governs the manner in which Get Reels collects, uses, maintains, and discloses information collected from users ("User" or "You") of the Site.</p>
+                <p>Welcome to Get Reels ("the Site"). This Privacy Policy governs the manner in which Get Reels
+                    collects, uses, maintains, and discloses information collected from users ("User" or "You") of the
+                    Site.</p>
 
-  <h3>1. Introduction:</h3>
-  <p>Get Reels is committed to protecting the privacy of its users. This Privacy Policy outlines the types of information that is collected by the Site and how it is used.</p>
+                <h3>1. Introduction:</h3>
+                <p>Get Reels is committed to protecting the privacy of its users. This Privacy Policy outlines the types
+                    of information that is collected by the Site and how it is used.</p>
 
-  <h3>2. Information Collection:</h3>
-  <p>We may collect personal identification information from Users in a variety of ways, including but not limited to, when Users visit our site, register on the site, subscribe to the newsletter, respond to a survey, fill out a form, and in connection with other activities, services, features, or resources we make available on our Site. Users may be asked for, as appropriate, name, email address, phone number. Users may, however, visit our Site anonymously. We will collect personal identification information from Users only if they voluntarily submit such information to us. Users can always refuse to supply personally identification information, except that it may prevent them from engaging in certain Site-related activities.</p>
+                <h3>2. Information Collection:</h3>
+                <p>We may collect personal identification information from Users in a variety of ways, including but not
+                    limited to, when Users visit our site, register on the site, subscribe to the newsletter, respond to
+                    a survey, fill out a form, and in connection with other activities, services, features, or resources
+                    we make available on our Site. Users may be asked for, as appropriate, name, email address, phone
+                    number. Users may, however, visit our Site anonymously. We will collect personal identification
+                    information from Users only if they voluntarily submit such information to us. Users can always
+                    refuse to supply personally identification information, except that it may prevent them from
+                    engaging in certain Site-related activities.</p>
 
-  <h3>3. Video Download Policy:</h3>
-  <p>Users are strictly prohibited from downloading any video content from the Site without prior permission. This includes but is not limited to copyrighted content. Users are allowed to download only their own content for personal use, such as saving it to their devices.</p>
+                <h3>3. Video Download Policy:</h3>
+                <p>Users are strictly prohibited from downloading any video content from the Site without prior
+                    permission. This includes but is not limited to copyrighted content. Users are allowed to download
+                    only their own content for personal use, such as saving it to their devices.</p>
 
-  <h3>4. Use of Collected Information:</h3>
-  <p>Any information collected from Users may be used for the following purposes:</p>
-  <ul>
-    <li>To improve customer service: Information you provide helps us respond to your customer service requests and support needs more efficiently.</li>
-    <li>To personalize user experience: We may use information in the aggregate to understand how our Users as a group use the services and resources provided on our Site.</li>
-    <li>To improve our Site: We may use feedback you provide to improve our products and services.</li>
-    <li>To send periodic emails: We may use the email address to respond to their inquiries, questions, and/or other requests.</li>
-  </ul>
+                <h3>4. Use of Collected Information:</h3>
+                <p>Any information collected from Users may be used for the following purposes:</p>
+                <ul>
+                    <li>To improve customer service: Information you provide helps us respond to your customer service
+                        requests and support needs more efficiently.</li>
+                    <li>To personalize user experience: We may use information in the aggregate to understand how our
+                        Users as a group use the services and resources provided on our Site.</li>
+                    <li>To improve our Site: We may use feedback you provide to improve our products and services.</li>
+                    <li>To send periodic emails: We may use the email address to respond to their inquiries, questions,
+                        and/or other requests.</li>
+                </ul>
 
-  <h3>5. Security:</h3>
-  <p>We adopt appropriate data collection, storage, and processing practices and security measures to protect against unauthorized access, alteration, disclosure, or destruction of your personal information, username, password, transaction information, and data stored on our Site.</p>
+                <h3>5. Security:</h3>
+                <p>We adopt appropriate data collection, storage, and processing practices and security measures to
+                    protect against unauthorized access, alteration, disclosure, or destruction of your personal
+                    information, username, password, transaction information, and data stored on our Site.</p>
 
-  <h3>6. Changes to This Privacy Policy:</h3>
-  <p>Get Reels has the discretion to update this privacy policy at any time. When we do, we will revise the updated date at the bottom of this page. We encourage Users to frequently check this page for any changes to stay informed about how we are helping to protect the personal information we collect. You acknowledge and agree that it is your responsibility to review this privacy policy periodically and become aware of modifications.</p>
+                <h3>6. Changes to This Privacy Policy:</h3>
+                <p>Get Reels has the discretion to update this privacy policy at any time. When we do, we will revise
+                    the updated date at the bottom of this page. We encourage Users to frequently check this page for
+                    any changes to stay informed about how we are helping to protect the personal information we
+                    collect. You acknowledge and agree that it is your responsibility to review this privacy policy
+                    periodically and become aware of modifications.</p>
 
-  <h3>7. Your Acceptance of These Terms:</h3>
-  <p>By using this Site, you signify your acceptance of this policy.</p>
+                <h3>7. Your Acceptance of These Terms:</h3>
+                <p>By using this Site, you signify your acceptance of this policy.</p>
 
-        <a href="contact.getreels@gmail.com" class="hire">Contact us</a>
+                <a href="contact.getreels@gmail.com" class="hire">Contact us</a>
 
-        </div> 
+            </div>
         </div>
-      </div>
+    </div>
     </div>
 </section>
-  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
