--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -82,6 +82,23 @@
   <p>Getreels supports all types of Instagram videos links</p>
 </div>
 
+<section>
+  <div class="cards1">
+    <div class="card1 red">
+        <p class="tip">Hover Me</p>
+        <p class="second-text">Lorem Ipsum</p>
+    </div>
+    <div class="card1 blue">
+        <p class="tip">Hover Me</p>
+        <p class="second-text">Lorem Ipsum</p>
+    </div>
+    <div class="card1 green">
+        <p class="tip">Hover Me</p>
+        <p class="second-text">Lorem Ipsum</p>
+    </div>
+</div>
+</section>
+
 
 <article>
   <div class="cards-content">
