--- a/views/imagetoPdf.hbs
+++ b/views/imagetoPdf.hbs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/style/imagetoPdf.css">
+<link rel="stylesheet" href="/style/imagetopdf.css">
 <link rel="stylesheet" href="/style/loading.css">
 
 <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined" rel="stylesheet">
