--- a/public/style/home.css
+++ b/public/style/home.css
@@ -411,3 +411,56 @@ body {
     }
   }
   
+
+  /* cards */
+
+
+  .card1s {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+  }
+  
+  .card1s .red {
+    background-color: #f43f5e;
+  }
+  
+  .card1s .blue {
+    background-color: #3b82f6;
+  }
+  
+  .card1s .green {
+    background-color: #22c55e;
+  }
+  
+  .card1s .card1 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    height: 100px;
+    width: 250px;
+    border-radius: 10px;
+    color: white;
+    cursor: pointer;
+    transition: 400ms;
+  }
+  
+  .card1s .card1 p.tip {
+    font-size: 1em;
+    font-weight: 700;
+  }
+  
+  .card1s .card1 p.second-text {
+    font-size: .7em;
+  }
+  
+  .card1s .card1:hover {
+    transform: scale(1.1, 1.1);
+  }
+  
+  .card1s:hover > .card1:not(:hover) {
+    filter: blur(10px);
+    transform: scale(0.9, 0.9);
+  }
