updation pdf tools

--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -55,46 +55,20 @@
         </svg>
       </div>
     </div>
-
-    <button class="botao">
-      <svg width="24px" height="24px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="mysvg">
-        <g id="SVGRepo_bgCarrier" stroke-width="0">
-        </g>
-        <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
-        <g id="SVGRepo_iconCarrier">
-          <g id="Interface / Download">
-            <path id="Vector" d="M6 21H18M12 3V17M12 17L17 12M12 17L7 12" stroke="#f1f1f1" stroke-width="2"
-              stroke-linecap="round" stroke-linejoin="round">
-            </path>
-          </g>
-        </g>
-      </svg>
-      <span class="texto">Wait for 10 Second </span>
-    </button>
-
-
   </div>
 
 </main>
 
 <div class="headline">
   <h1>All features of Getreels</h1>
-  <p>Getreels supports all types of Instagram videos links</p>
+  <p>Getreels supports all types of Instagram videos links also hve tools to convert Image to PDF</p>
 </div>
 
 <section>
   <div class="cards">
     <div id="jpg-pdf" class="card1 red">
-        <p class="tip">Convert JPG to PDF</p>
+        <p class="tip">PDF Converter Tools</p>
         <p class="second-text">Covert Image to PDF for free</p>
-    </div>
-    <div id="png-pdf" class="card1 blue">
-        <p class="tip">Convert PNG to PDF</p>
-        <p class="second-text">Covert Image to PDF for free</p>
-    </div>
-    <div id="jpg-png" class="card1 green">
-        <p class="tip">Cnvert JPG to  PNG </p>
-        <p class="second-text">Comming Soon </p>
     </div>
 </div>
 
