--- a/public/style/home.css
+++ b/public/style/home.css
@@ -3,6 +3,8 @@ body {
     height: 100vh; /* Set the height of the body to 100% of the viewport height */
 }
 
+
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 *{
@@ -30,9 +32,7 @@ body {
 
 .home
 {
-  background: #780206;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #061161, #780206);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #35125c, #043744); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background-image: radial-gradient(circle, #371026, #2d1228, #231328, #1a1426, #131322, #0e1421, #0b151f, #0a161d, #09191f, #091c20, #0a1e20, #0c2120);
   background-attachment: fixed;
   background-size: cover;
   background-blend-mode: overlay;
@@ -42,6 +42,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-bottom: 50px;
 
 
 }
