--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -22,10 +22,9 @@
     <meta name="msapplication-TileImage" content="/images/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <meta name="description"
-        content="
-   GetReels is your ultimate solution for effortlessly downloading Instagram videos in just a few clicks. Whether it's a captivating clip, a hilarious moment, or an inspiring post, GetReels offers a seamless experience for grabbing your favorite Instagram videos with ease. Simply paste the URL of the Instagram video into our user-friendly interface and unlock instant access to a plethora of download options. With GetReels, you can save Instagram videos directly to your device in high quality, ensuring you never miss a moment worth keeping. Our intuitive platform streamlines the process, allowing you to download Instagram videos quickly and conveniently. Say goodbye to complicated procedures and hello to hassle-free downloading with GetReels.">
+        content={{desc}}>
     <meta name="keywords"
-        content="Instagram video downloader, download Instagram videos, save Instagram videos, Instagram video download tool, Instagram download, IG video downloader">
+        content={{keywords}}>
           <title>{{title}}</title>
     <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
     <link rel="stylesheet" href="/style/footer.css">
