--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -75,23 +75,10 @@
 
 <script>
   const jpg = document.getElementById('jpg-pdf');
-  const png = document.getElementById('png-pdf');
-  const jpgpng = document.getElementById('jpg-png');
-
   jpg.addEventListener('click', () => {
-    window.location.href = '/tools/imagetoPdf';
-  })
-   png.addEventListener('click', () => {
-    window.location.href = '/tools/imagetoPdf';
+    window.location.href = '/tools';
   })
 
-  jpgpng.addEventListener('click', () => {
-    swal({
-      title: "Coming Soon",
-      text: "This feature will be available soon",
-      icon: "warning",
-    })
-  })
 </script>
 </section>
 
