word error prevent

--- a/views/tools.hbs
+++ b/views/tools.hbs
@@ -23,7 +23,7 @@
         <div class="card-content">
           <h3 class="card-title">Word to PDF</h3>
           <p class="card-description">Convert your Word documents to secure PDF files.</p>
-          <a href="/tools/imagetoPdf" class="card-btn">Convert</a>
+          <a href="#" class="card-btn word-conv">Convert</a>
         </div>
       </div>
 
@@ -39,3 +39,9 @@
       </div>
     </div>
   </div>
+<script>
+  const word = document.querySelector('.word-conv');
+  word.addEventListener('click', () => {
+    swal("Under Development", "This feature is under development", "warning");
+  })
+</script>
