--- a/public/style/nav.css
+++ b/public/style/nav.css
@@ -5,8 +5,10 @@
   display: flex;
   align-items: center;
   background: #fff;
-  border-radius: 12px;
   margin-right: 10px;
+  height: 50px;
+  width: 100%;
+  margin-top: 0;
 }
 .nav-links li{
   list-style: none;
