--- a/public/style/home.css
+++ b/public/style/home.css
@@ -466,3 +466,85 @@ body {
     filter: blur(10px);
     transform: scale(0.9, 0.9);
   }
+
+
+  /* title button */
+
+
+  .button {
+    line-height: 1;
+    text-decoration: none;
+    display: inline-flex;
+    align-items: center;
+    gap: .75rem;
+    background-color: var(--clr);
+    color: #fff;
+    border-radius: 10rem;
+    font-weight: 600;
+    padding: .75rem 1.5rem;
+    padding-left: 20px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    transition: background-color .3s;
+  }
+  
+  .button__icon-wrapper {
+    flex-shrink: 0;
+    width: 25px;
+    height: 25px;
+    position: relative;
+    color: var(--clr);
+    background-color: #fff;
+    border-radius: 50%;
+    display: grid;
+    place-items: center;
+    overflow: hidden;
+  }
+  
+  .button:hover {
+    background-color: #000;
+  }
+  
+  .button:hover .button__icon-wrapper {
+    color: #000;
+  }
+  
+  .button__icon-svg--copy {
+    position: absolute;
+    transform: translate(-150%, 150%);
+  }
+  
+  .button:hover .button__icon-svg:first-child {
+    transition: transform .3s ease-in-out;
+    transform: translate(150%, -150%);
+  }
+  
+  .button:hover .button__icon-svg--copy {
+    transition: transform .3s ease-in-out .1s;
+    transform: translate(0);
+  }
+
+  @media screen and (max-width: 600px) {
+    .button {
+      padding: .5rem .5rem;
+      font-size: small;
+    }
+    
+  }
+
+  @media screen and (max-width: 700px) {
+    .button {
+      padding: .5rem .5rem;
+      font-size: small;
+    }
+
+    @media screen and (max-width: 500px) {
+      .button {
+        padding: .5rem .5rem;
+        font-size: xx-small;
+      }
+      
+    }
+    
+  }
