--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -100,7 +100,7 @@
 
 <div class="headline">
   <h1>All features of Getreels</h1>
-  <p>Getreels supports all types of Instagram videos links also hve tools to convert Image to PDF</p>
+  <p>Getreels supports all types of Instagram video links and also includes tools to convert images to PDF</p>
 </div>
 
 <section>
