--- a/views/tools.hbs
+++ b/views/tools.hbs
@@ -52,7 +52,7 @@
       </div>
       <div class="foobar-faq">
         <h3 class="foobar-faq-heading">Best website for image to PDF conversion?</h3>
-        <p class="foobar-faq-text">Popular websites for <span class="foobar-highlight">image to PDF conversion</span> include PDFCandy, SmallPDF, and ILovePDF. They offer user-friendly interfaces and reliable <span class="foobar-highlight">PDF creation</span> processes.</p>
+        <p class="foobar-faq-text">Popular websites for <span class="foobar-highlight">image to PDF conversion</span> include getreels, PDFCandy, SmallPDF, and ILovePDF. They offer user-friendly interfaces and reliable <span class="foobar-highlight">PDF creation</span> processes.</p>
       </div>
       <div class="foobar-faq">
         <h3 class="foobar-faq-heading">Free image to PDF converters?</h3>
