--- a/public/style/tools.css
+++ b/public/style/tools.css
@@ -19,7 +19,6 @@
   .page-container {
     display: flex;
     flex-direction: column;
-    height: 100%;
     padding: 20px;
   }
   
@@ -127,7 +126,10 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      height: calc(100vh - 100px); /* Adjust for footer padding */
+      padding: 20px;
+      margin-top: 50px;
+      margin-bottom: 50ox;
+      
     }
     
     .foobar-card {
