--- a/public/style/footer.css
+++ b/public/style/footer.css
@@ -3,7 +3,7 @@
   
   position: absolute;
   width: 100%;
-  background: #3586ff;
+  background: #002864;
   min-height: 100px;
   padding: 20px 50px;
   display: flex;
