--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -17,6 +17,7 @@
     <link rel="icon" type="image/png" sizes="96x96" href="/imges/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
     <link rel="manifest" href="/images/manifest.json">
+    <meta name="google-adsense-account" content="ca-pub-9467128470827962">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/images/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
