--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -78,7 +78,7 @@
       <span class="username">@Getreels</span>
     </div>
     <div class="insta-image">
-      <img src="https://www.slashgear.com/img/gallery/how-to-download-instagram-photos-and-videos-to-your-iphone/l-intro-1705955793.jpg" alt="Post Image">
+      <img id="insta-image" src="https://www.slashgear.com/img/gallery/how-to-download-instagram-photos-and-videos-to-your-iphone/l-intro-1705955793.jpg" alt="Post Image">
     </div>
     <div class="insta-actions">
       <div class="action-icons">
